--- a/style.css
+++ b/style.css
@@ -36,4 +36,11 @@ body{
 	white-space: nowrap;
 }
 
+/* Fazer o commit na main 
+ir pra pasta do projeto(dentro da 18)
+git status
+git add .
+git commit -m "Sua mensagem de commit aqui"
+git push origin main
+*/
 
