--- a/registro.css
+++ b/registro.css
@@ -1,12 +1,26 @@
 @charset  "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
+
 body {
     background-color: rgba(0, 0, 0, 0.603);
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-size: 20px;
 }
 div.clock{
-	font-size: 40px;
+  /*font-size: 40px;*/
+  font-family: "Michroma", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 
 }
 *{
     padding: 0;
-    
+
 }
