Problemas no git 'origin/main' into main

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
 	white-space: nowrap;
 }
 
-/* Fazer o commit na main arra
+/* Fazer o commit na main arra teste
 ir pra pasta do projeto(dentro da 18)
 git status
 git add .
