--- a/registro.css
+++ b/registro.css
@@ -1,26 +1,55 @@
 @charset  "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
 
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html{
+  font-size: 62.5;
+}
+
 body {
     background-color: rgba(0, 0, 0, 0.603);
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-size: 20px;
+    font-family: "Michroma", sans-serif;
+    font-optical-sizing: auto;    
+    font-weight: 400;
+    font-style: normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.all{
+  padding: 25px;
+  background-color: white;
+  border-radius: 5px;  
+}
+
+h1.all{
+  text-align:center;
+}
+
 div.clock{
   /*font-size: 40px;*/
-  font-family: "Michroma", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-
+  font-size: 6rem;  
+  font-weight: 700;
+  text-align: center;
+  color: brown;
 }
-*{
-    padding: 0;
+
+.greating{
+  font-size: 1.6rem;
+  padding: 20px 0;
+  text-align: center;
+}
+
+footer{
+  font-size: 1.2rem;
+  text-align: center;
+  border-top: 1px solid white;
+  padding-top: 20px;
 
 }
