--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body{
 ir pra pasta do projeto(dentro da 18)
 git status
 git add .
-git commit -m "Arrumei tamanho relogio  "
+git commit -m "Logo da index"
 git push origin main
 
 
